@@ -38,6 +38,8 @@
 <p>2017-10-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/tiff.c (WriteTIFFImage): Fix SourceForge issue #509
+&quot;Memory leak in tiff.c&quot;.</li>
 <li>magick/module.c (FindMagickModule): Fix SourceForge issue #502
 &quot;null pointer in module.c&quot;.</li>
 <li>coders/avs.c (ReadAVSImage): Fix Coverity CID 184115 &quot;Control
